<resources>
    <string name="app_name">Farmer</string>

    <string name="add_new_pen">Add New Pen</string>

    <string name="save">Save</string>
    <string name="poultry">Poultry</string>
    <string name="pen_name">Pen name</string>
    <string name="stock">Stock</string>
    <string name="age">Age</string>
    <string name="date">Date</string>
    <string name="number">Number</string>
    <string name="losses">Losses</string>
    <string name="egg_production">Egg Production</string>
    <string name="production">Production</string>
    <string name="feed">Feed</string>
    <string name="medication">Medication</string>
    <string name="breed">Breed</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_breed">Breed</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <string name="vaccination">Vaccination</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="edit_data">Edit</string>

    <string name="broiler_starter">Broiler Starter</string>
    <string name="chicks_marsh">Chick\'s Marsh</string>
    <string name="growers_marsh">Grower\'s marsh</string>
    <string name="layers_marsh">Layer\'s marsh</string>
    <string name="feed_unknown">Unknown Feed</string>
    <string name="change_feed">Change Feed</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pen">Pens</string>
    <string name="sales">Sales</string>
    <string name="statistics">Statistics</string>
    <string name="stock_date">Stock Date</string>
    <string name="stock_details">Stock Details</string>
    <string name="turkey">Turkey</string>
    <string name="cockerel">Cockerel</string>
    <string name="layers">Layers</string>
    <string name="broilers">Broilers</string>
    <string name="breed_unknown">Unknown Breed</string>
    <string name="edit_breed_source">edit breed</string>
    <string name="bird_source">Bird Source</string>
    <string name="delete_production_dialog_msg">Delete this day\'s production?</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

</resources>