<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    tools:context=".PenBlock">

    <TextView
        android:id="@+id/pen_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="General Info" />


    <LinearLayout
        android:id="@+id/pen_block_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pen_info"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <TextView
                    android:id="@+id/pen_production"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="24dp"
                    android:text="@string/production"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_menu_gallery" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <TextView
                    android:id="@+id/pen_sales"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="24dp"
                    android:text="@string/sales"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_menu_gallery" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <TextView
                    android:id="@+id/pen_vaccination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="24dp"
                    android:text="@string/vaccination"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_menu_gallery" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <TextView
                    android:id="@+id/pen_feed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="24dp"
                    android:text="@string/feed"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_menu_gallery" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <TextView
                    android:id="@+id/pen_expenses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="24dp"
                    android:text="Expenses"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_menu_gallery" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <TextView
                    android:id="@+id/pen_medic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="24dp"
                    android:text="@string/medication"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:drawableTopCompat="@drawable/ic_menu_gallery" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/pen_block_frag_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pen_block_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        app:srcCompat="@drawable/ic_baseline_edit_24" />
</RelativeLayout>